[package]
name = "slipway_jsx_transpile"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
# swc_core = { version = "16.7.0", features = [
#     "ecma_parser",
#     "ecma_codegen",
#     "ecma_transforms_react",
# ] }
swc_common = "8.0.0"
swc_ecma_ast = "8.0.1"
swc_ecma_codegen = "8.0.2"
swc_ecma_parser = "10.0.1"
swc_ecma_transforms = { version = "14.0.0", features = ["react"] }
swc_ecma_visit = "8.0.0"
wit-bindgen = "0.41.0"

[lib]
crate-type = ["cdylib"]
